...
            android:layout_marginStart="2dp"
            app:cardCornerRadius="5dp"
            app:cardMaxElevation="@dimen/cardview_default_elevation"
            tools:ignore="PrivateResource">

            <TextView
                android:id="@+id/name_description_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_name"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:textSize="@dimen/text_size_title_detail"
...
